--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<article class="post featured">
 								<header class="major">
 									<a href="#" class="image main"><img src="images/me.jpeg" alt="" /></a>
-									<em><h2><a href="index.html">My Name is Abdulkadir M.Hassen <br /></em>
+									<em><h2><a href="index.html">Abdulkadir M.Hassen <br /></em>
 									</a></h2>
 									<p>Entry-level front-end developer | HTML5, CSS3, Python </br>
 									 Last year software engineering(Hons) student at Infrastructure Univestiry Kuala Lumpur(IUKL). </p>
@@ -83,7 +83,7 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://github.com/DadirBaaji/TweetBot_python.gi">Project 2<br/>
+										<h2><a href="https://github.com/DadirBaaji/TweetBot_python.git">Project 2<br/>
 										Twitter Bot</a></h2>
 									</header>
 									<a href="https://github.com/DadirBaaji/TweetBot_python.git" class="image fit"><img src="images/tweetbot.png" alt="" /></a>
