--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 									<a href="#" class="image main"><img src="images/me.jpeg" alt="" /></a>
 									<em><h2><a href="index.html">Abdulkadir M.Hassen <br /></em>
 									</a></h2>
-									<p>Software developer | HTML5, CSS3, TypeScript, Python, Java, C/C++ </br>
+									<p>Software developer | AnularJs, Python, Java, C/C++ </br>
 								
 									 Last year software engineering(Hons) student at Infrastructure Univestiry Kuala Lumpur(IUKL). </p>
 								</header>
